Category controller & views completed

--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="#">Products</a>
-                        <a class="nav-link active" aria-current="page" href="#">Brands</a>
-                        <a class="nav-link active" aria-current="page" href="#">Categories</a>
-                        <a class="nav-link active" aria-current="page" href="#">SubCategories</a>
-                        <a class="nav-link active" aria-current="page" href="#">Suppliers</a>
+                        <a class="nav-link active" aria-current="page" href="~/Admin/Home/Index">Products</a>
+                        <a class="nav-link active" aria-current="page" href="~/Admin/Brand/Index">Brands</a>
+                        <a class="nav-link active" aria-current="page" href="~/Admin/Category/Index">Categories</a>
+                        <a class="nav-link active" aria-current="page" href="~/Admin/SubCategory/Index">SubCategories</a>
+                        <a class="nav-link active" aria-current="page" href="~/Admin/Supplier/Index">Suppliers</a>
                     </div>
                 </div>
             </div>
