--- a/Technomarkt_Ecommerce/UI/Content/css/Styles.css
+++ b/Technomarkt_Ecommerce/UI/Content/css/Styles.css
@@ -24,3 +24,20 @@
     }
 
 
+div h2 {
+    font-family: Roboto, sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+/*Forms*/
+
+
+#form header {
+    font-family: Roboto, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+
