sub category controller & views completed

--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Supplier/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Supplier/Index.cshtml
@@ -43,8 +43,8 @@
                     <td>@supplier.Email</td>
                     <td>@supplier.Address</td>
                     <td>@supplier.PhoneNumber</td>
-                    <td><a href="/Admin/Supplier/Update/@supplier.ID" class="btn btn-primary">Update</a></td>
-                    <td><a href="/Admin/Supplier/Delete/@supplier.ID" class="btn btn-danger">Delete</a></td>
+                    <td><a href="/Admin/Supplier/Update/@supplier.ID" class="btn btn-primary btn-sm">Update</a></td>
+                    <td><a href="/Admin/Supplier/Delete/@supplier.ID" class="btn btn-danger btn-sm">Delete</a></td>
                 </tr>
                 }
             </tbody>
