--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Brand/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Brand/Index.cshtml
@@ -39,8 +39,8 @@
                 <tr>
                     <td>@brand.ID</td>
                     <td>@brand.BrandName</td>
-                    <td><a href="/Admin/Brand/Update/@brand.ID" class="btn btn-primary">Update</a></td>
-                    <td><a href="/Admin/Brand/Delete/@brand.ID" class="btn btn-danger">Delete</a></td>
+                    <td><a href="/Admin/Brand/Update/@brand.ID" class="btn btn-primary btn-sm">Update</a></td>
+                    <td><a href="/Admin/Brand/Delete/@brand.ID" class="btn btn-danger btn-sm">Delete</a></td>
                 </tr>
                 }
             </tbody>
