--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Category/Index.cshtml
@@ -51,8 +51,8 @@
                                     break;
                             }
                         </td>
-                        <td><a href="/Admin/Category/Update/@category.ID" class="btn btn-primary">Update</a></td>
-                        <td><a href="/Admin/Category/Delete/@category.ID" class="btn btn-danger">Delete</a></td>
+                        <td><a href="/Admin/Category/Update/@category.ID" class="btn btn-primary btn-sm">Update</a></td>
+                        <td><a href="/Admin/Category/Delete/@category.ID" class="btn btn-danger btn-sm">Delete</a></td>
                     </tr>
                 }
             </tbody>
