--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Home/Index.cshtml
@@ -1,6 +1,74 @@
-﻿@{
+﻿@model List<Product>
+@{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="text-center mt-5">
+    <h2>PRODUCTS</h2>
+</div>
+
+<div class="row mt-5">
+    <div class="col-lg-12">
+        @{if (TempData["info"] != null)
+            {
+                <div class="alert alert-success" role="alert">
+                    @TempData["info"]
+                </div>
+            }
+            else if (TempData["error"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @TempData["error"]
+                </div>
+            }
+
+        }
+
+        @Html.ActionLink("Add Product", "Create", null, new { @class = "btn btn-dark" })
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Image</th>
+                    <th>Name</th>
+                    <th>Brand</th>
+                    <th>Category</th>
+                    <th>Supply Cost</th>
+                    <th>Unit Price</th>
+                    <th>Units In Stock</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var product in Model)
+                {
+                <tr>
+                    <td width="50px">
+                        <img src="~/Content/img/@product.ProductImagePath" style="width:auto; height:70px" />
+                    </td>
+                    <td>@product.ProductName</td>
+                    <td>@product.Brand.BrandName</td>
+                    <td>@product.SubCategory.SubCategoryName</td>
+                    <td>$@product.SupplyCost</td>
+                    <td>$@product.UnitPrice</td>
+                    <td>@product.UnitsInStock</td>
+                    <td>
+                        @switch (product.Status)
+                        {
+                            case Core.Enums.Status.Active:
+                                <span class="badge bg-success">@product.Status.ToString()</span>
+                                break;
+                            case Core.Enums.Status.Inactive:
+                                <span class="badge bg-danger">@product.Status.ToString()</span>
+                                break;
+                        }
+                    </td>
+                    <td><a href="/Admin/Home/Update/@product.ID" class="btn btn-primary btn-sm">Update</a></td>
+                    <td><a href="/Admin/Home/Delete/@product.ID" class="btn btn-danger btn-sm">Delete</a></td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+</div>
 
