--- a/Technomarkt_Ecommerce/UI/Views/Home/_CategoryPartial.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/_CategoryPartial.cshtml
@@ -5,7 +5,7 @@
     @foreach (var subcategory in Model)
     {
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            @subcategory.SubCategoryName
+            <a href="/Home/Index/@subcategory.ID">@subcategory.SubCategoryName</a>
             <span class="badge bg-warning rounded-pill">@subcategory.Products.Count()</span>
         </li>
     }
