--- a/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
@@ -41,32 +41,41 @@
     </div>
 </section>*@
 
+
+
 <section id="products">
-        <div class="row mt-5">
-            <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
-                @Html.Action("_CategoryPartial")
-                @Html.Action("_BrandPartial")
+    @{if (TempData["error"] != null)
+        {
+            <div class="alert alert-danger" role="alert">
+                @TempData["error"]
             </div>
-            @foreach (var product in Model)
-            {
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-tumb">
-                            <img src="~/Content/img/@product.ProductImagePath" alt="mac-14">
+        }
+    }
+    <div class="row mt-5">
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            @Html.Action("_CategoryPartial")
+            @Html.Action("_BrandPartial")
+        </div>
+        @foreach (var product in Model)
+        {
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="product-card">
+                    <div class="product-tumb">
+                        <img src="~/Content/img/@product.ProductImagePath" alt="mac-14">
+                    </div>
+                    <div class="product-details">
+                        <span class="product-catagory">@product.SubCategory.SubCategoryName</span>
+                        <h4><a href="#">@product.ProductName</a></h4>
+                        <div class="product-bottom-details">
+                            <div class="product-price">@product.UnitPrice</div>
                         </div>
-                        <div class="product-details">
-                            <span class="product-catagory">@product.SubCategory.SubCategoryName</span>
-                            <h4><a href="#">@product.ProductName</a></h4>
-                            <div class="product-bottom-details">
-                                <div class="product-price">@product.UnitPrice</div>
-                            </div>
-                            <div class="row justify-content-center mt-2">
-                                <button type="button" class="btn btn-dark">Add to Cart</button>
-                            </div>
+                        <div class="row justify-content-center mt-2">
+                            @Html.ActionLink("Add to Cart", "AddToCart", "Home", new { id = product.ID }, new { @class = "btn btn-dark" })
                         </div>
                     </div>
                 </div>
-            }
-        </div>
+            </div>
+        }
+    </div>
 </section>
 
