--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -48,8 +48,8 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Cart</a>
+                        <li class="nav-item me-2">
+                            <a class="nav-link active" aria-current="page" href="/Home/MyCart">My Cart</a>
                         </li>
                     </ul>
                 </div>
