--- a/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
                     </div>
                     <div class="product-details">
                         <span class="product-catagory">@product.SubCategory.SubCategoryName</span>
-                        <h4><a href="#">@product.ProductName</a></h4>
+                        <h4>@Html.ActionLink(product.ProductName, "ProductDetails", new { id = product.ID }, null)</h4>
                         <div class="product-bottom-details">
                             <div class="product-price">@product.UnitPrice</div>
                         </div>
