--- a/Technomarkt_Ecommerce/UI/Views/Home/ProductDetails.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/ProductDetails.cshtml
@@ -15,6 +15,9 @@
                 <h3>$@Model.UnitPrice</h3>
                 <h5>Category: @Model.SubCategory.Category.CategoryName</h5>
                 <p>@Model.Description</p>
+                <div class="row mt-2">
+                    @Html.ActionLink("Add to Cart", "AddToCart", "Home", new { id = Model.ID }, new { @class = "btn btn-dark" })
+                </div>
             </div>
         </div>
     </div>
