Wishlist added and tested

--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -50,6 +50,9 @@
                             <a class="nav-link active" aria-current="page" href="#">About</a>
                         </li>
                         <li class="nav-item me-2">
+                            <a class="nav-link active" aria-current="page" href="/Home/Wishlist">Wishlist</a>
+                        </li>
+                        <li class="nav-item me-2">
                             <a class="nav-link active" aria-current="page" href="/Home/MyCart">My Cart</a>
                         </li>
                     </ul>
