--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>Technomarkt</title>
     <link href="~/Content/css/styles.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <section id="navbar">
@@ -39,8 +38,9 @@
                                 Categories
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#" style="color:black;">Category 1</a></li>
+                                <li><a class="dropdown-item" href="#" style="color:black;">Category 2</a></li>
+                                <li><a class="dropdown-item" href="#" style="color:black;">Category 3</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -69,7 +69,6 @@
         </footer>
     </div>
 
-    <script src="~/Scripts/bootstrap.bundle.js"></script>
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/jquery-3.6.0.js"></script>
 </body>
