--- a/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                         </div>
                         <div class="row justify-content-center mt-2">
                             @Html.ActionLink("Add to Cart", "AddToCart", "Home", new { id = product.ID }, new { @class = "btn btn-dark" })
-                            @Html.ActionLink("Add to Wishlist", "AddToWishlist", "Home", new { id = product.ID }, new { @class = "btn btn-warning" })
+                            @Html.ActionLink("Add to Wishlist", "AddToWishlist", "Home", new { id = product.ID }, new { @class = "btn btn-warning mt-2" })
                         </div>
                     </div>
                 </div>
