Billing details & payment forms created, user order will be created next

--- a/Technomarkt_Ecommerce/UI/Views/Home/MyCart.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/MyCart.cshtml
@@ -55,6 +55,7 @@
                                 <li><strong>Shipping: </strong>$@shipping</li>
                             }
                             <li><strong>Total Price: </strong>$@totalPrice</li>
+                            @Html.ActionLink("Continue", "BillingDetails", null, new { @class = "btn btn-dark btn-lg btn-block" })
                         </ul>
                     </div>
                 </div>
