Order created, order detail needs to be fixed

--- a/Technomarkt_Ecommerce/UI/Views/Home/Checkout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Checkout.cshtml
@@ -71,9 +71,7 @@
                     </li>
                 </ul>
 
-                <button type="button" class="btn btn-dark btn-lg btn-block">
-                    Buy Now
-                </button>
+                @Html.ActionLink("Buy Now", "OrderComplete", null, new { @class = "btn btn-dark btn-lg btn-block" })
             </div>
         </div>
     </div>
