--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -101,6 +101,7 @@
         </footer>
     </div>
 
+    <script src="https://kit.fontawesome.com/e3333d1da1.js" crossorigin="anonymous"></script>
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/jquery-3.6.0.js"></script>
 </body>
