Updated billing, checkout, order completion pages. Mail sender needs to be fixed!!!

--- a/Technomarkt_Ecommerce/UI/Views/Home/MyCart.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/MyCart.cshtml
@@ -55,7 +55,7 @@
                                 <li><strong>Shipping: </strong>$@shipping</li>
                             }
                             <li><strong>Total Price: </strong>$@totalPrice</li>
-                            @Html.ActionLink("Continue", "BillingDetails", null, new { @class = "btn btn-dark btn-lg btn-block" })
+                            @Html.ActionLink("Continue", "BillingDetails", null, new { @class = "btn btn-dark btn-lg" })
                         </ul>
                     </div>
                 </div>
