--- a/Technomarkt_Ecommerce/UI/Views/Home/Checkout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Checkout.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "Checkout";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    UI.Models.Cart cart = Session["cart"] as UI.Models.Cart;
+    decimal? totalPrice = 0;
+    decimal? shipping = 12;
 }
 
 <div class="row" style="margin-top:50px;">
@@ -52,14 +55,29 @@
             </div>
             <div class="card-body">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                        Subtotal
-                        <span>$0</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                        Shipping
-                        <span>$14</span>
-                    </li>
+                    @foreach (var item in cart.myCart.ToList())
+                    {
+                        totalPrice += item.SubTotal;
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Sub Total
+                            <span>$@item.SubTotal</span>
+                        </li>
+                    }
+                    @if (totalPrice >= 300)
+                    {
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Shipping
+                            <span>$0</span>
+                        </li>
+                    }
+                    else
+                    {
+                        totalPrice += shipping;
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Shipping
+                            <span>@shipping</span>
+                        </li>
+                    }
                     <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                         <div>
                             <strong>Total amount</strong>
@@ -67,11 +85,11 @@
                                 <p class="mb-0">(including VAT)</p>
                             </strong>
                         </div>
-                        <span><strong>$0</strong></span>
+                        <span><strong>$@totalPrice</strong></span>
                     </li>
                 </ul>
 
-                @Html.ActionLink("Buy Now", "OrderComplete", null, new { @class = "btn btn-dark btn-lg btn-block" })
+                @Html.ActionLink("Make Payment", "OrderComplete", null, new { @class = "btn btn-dark btn-lg" })
             </div>
         </div>
     </div>
