--- a/Technomarkt_Ecommerce/UI/Views/Home/OrderComplete.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/OrderComplete.cshtml
@@ -9,10 +9,11 @@
 <section id="order-summary" style="margin-top:50px;">
     <div class="row">
         <div class="col-md-9">
-            <h1>We have received your order. Order no: <strong>@ViewBag.OrderNumber</strong></h1>
-            <table class="table table-striped table-hover">
+            <h1>We have received your order.</h1>
+            <table class="table">
                 <thead>
                     <tr>
+                        <th>Product Image</th>
                         <th>Product Name</th>
                         <th>Quantity</th>
                         <th>Unit Price</th>
@@ -25,6 +26,10 @@
                         totalPrice += item.SubTotal;
                         <tr>
 
+
+                            <td width="50px">
+                                <img src="~/Content/img/@item.ProductImage" style="width:auto; height:70px" />
+                            </td>
                             <td>
                                 @item.ProductName
                             </td>
@@ -41,16 +46,14 @@
                         </tr>
                     }
                     <tr>
-
-                        <td>
-                            <h5>Toplam Fiyat: $@totalPrice</h5>
-                        </td>
-
                     </tr>
                 </tbody>
             </table>
+            <h5>Total: $@totalPrice</h5>
+        </div>
+        <div class="col-md-3">
+            @Html.ActionLink("Return to Main Page", "Index", null, new { @class = "btn btn-dark btn-lg" })
         </div>
     </div>
-    @Html.ActionLink("Return to Main Page", "Index", null, new { @class = "btn btn-dark btn-lg btn-block" })
 </section>
 
