--- a/Technomarkt_Ecommerce/UI/Views/Home/_BrandPartial.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/_BrandPartial.cshtml
@@ -5,7 +5,7 @@
     @foreach (var brand in Model)
     {
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            @brand.BrandName
+            <a href="/Home/Index/@brand.ID">@brand.BrandName</a>
             <span class="badge bg-warning rounded-pill">@brand.Products.Count()</span>
         </li>
     }
