--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/admin/home">Admin</a>
+                            </li>
+                        }
                         @if (Session["login"] == null)
                         {
                             <li class="nav-item">
