Accountant & depot area home controllers created, checkout page updated.

--- a/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="~/Content/img/Zenbook-14.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2 class="carousel-caption-2">Asus Zenbook 14<br />Now available</h2>
+                    <h2 class="carousel-caption-2">Asus Zenbook 14<br />Now available!</h2>
                 </div>
             </div>
         </div>
