--- a/Technomarkt_Ecommerce/UI/Content/css/Styles.css
+++ b/Technomarkt_Ecommerce/UI/Content/css/Styles.css
@@ -70,6 +70,15 @@ div h2 {
 }
 
 
+/*Checkout Page*/
+.payment-method img{
+    width:5em;
+    height:auto;
+    padding-right:20px;
+    padding-bottom:30px;
+}
+
+
 /*Product Cards*/
 
 #products {
@@ -181,11 +190,11 @@ div h2 {
 
     #footer li a {
         text-decoration: none;
-        color: #F1C40F;
+        color: white;
     }
         #footer li a:hover {
             text-decoration: none;
-            color: #D4AC0D;
+            color: #F1C40F;
         }
 
     #footer button {
