--- a/Technomarkt_Ecommerce/UI/Views/Home/Checkout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Checkout.cshtml
@@ -14,6 +14,12 @@
                 <h5 class="mb-0">Payment</h5>
             </div>
             <div class="card-body">
+                <div class="payment-method d-flex">
+                    <img src="~/Content/img/visa.png" />
+                    <img src="~/Content/img/mastercard.png" />
+                    <img src="~/Content/img/discover.jpg" />
+                    <img src="~/Content/img/paypal.jpg" />
+                </div>
                 <form>
                     <div class="row mb-4">
                         <div class="col">
