--- a/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Shared/_Layout.cshtml
@@ -17,11 +17,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="~/Admin/Home/Index">Products</a>
-                        <a class="nav-link active" aria-current="page" href="~/Admin/Brand/Index">Brands</a>
-                        <a class="nav-link active" aria-current="page" href="~/Admin/Category/Index">Categories</a>
-                        <a class="nav-link active" aria-current="page" href="~/Admin/SubCategory/Index">SubCategories</a>
-                        <a class="nav-link active" aria-current="page" href="~/Admin/Supplier/Index">Suppliers</a>
+                        <a class="nav-link active" aria-current="page" href="#">Orders</a>
+                    </div>
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active" aria-current="page" href="#">Supplier Orders</a>
                     </div>
                 </div>
             </div>
@@ -32,7 +31,7 @@
         @RenderBody()
         <hr />
     </div>
-        <section id="footer">
+    <section id="footer">
 
         <div class="footer-top-area">
             <div class="zigzag-bottom"></div>
