--- a/Technomarkt_Ecommerce/UI/Views/Home/Login.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Login.cshtml
@@ -6,6 +6,13 @@
 
 <div class="row">
     <div class="col-md-4 mx-auto mt-5">
+        @{if (TempData["error"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @TempData["error"]
+                </div>
+            }
+        }
         <div class="card">
             <div class="card-header">
                 <h2 style="text-align:center;">Login</h2>
