--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                                         <a class="nav-link active" aria-current="page" href="/Home/Logout" style="color:black;">Logout</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="/Home/UserOrders" style="color:black;">Orders</a>
+                                        <a class="nav-link active" aria-current="page" href="/Order/Index" style="color:black;">Orders</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link active" aria-current="page" href="#" style="color:black;">Account</a>
