--- a/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
@@ -1,8 +1,87 @@
-﻿
+﻿@model List<Order>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    @foreach (var order in Model)
+    {
+        <div class="col-md-4 mx-auto mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Order No:
+                            <span>@order.OrderNo</span>
+                        </li>
+                        @switch (order.OrderStatus)
+                        {
+                            case DAL.Enums.OrderStatus.Processing:
+                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                    Order Status:
+                                    <span class="badge bg-info">@order.OrderStatus.ToString()</span>
+                                </li>
+                                break;
+                            case DAL.Enums.OrderStatus.Shipping:
+                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                    Order Status:
+                                    <span class="badge bg-warning">@order.OrderStatus.ToString()</span>
+                                </li>
+                                break;
+                            case DAL.Enums.OrderStatus.Delivered:
+                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                    Order Status:
+                                    <span class="badge bg-success">@order.OrderStatus.ToString()</span>
+                                </li>
+                                break;
+                            case DAL.Enums.OrderStatus.Cancelled:
+                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                    Order Status:
+                                    <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
+                                </li>
+                                break;
+                            case DAL.Enums.OrderStatus.Refunded:
+                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                    Order Status:
+                                    <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
+                                </li>
+                                break;
+
+                        }
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Order Date:
+                            <span>@order.OrderDate</span>
+                        </li>
+                        @if (order.OrderStatus != DAL.Enums.OrderStatus.Delivered)
+                        {
+                            <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                Delivery Date:
+                                <span>-</span>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                Delivery Date:
+                                <span>@order.DeliveryDate</span>
+                            </li>
+                        }
+                    </ul>
+                    <div class="d-flex">
+                        <button type="button" class="btn btn-sm btn-primary mt-2 me-2">Details</button>
+                        @if (order.OrderStatus == DAL.Enums.OrderStatus.Processing)
+                        {
+                            <button type="button" class="btn btn-sm btn-danger mt-2 me-2">Cancel</button>
+                        }
+                        @if (order.OrderStatus == DAL.Enums.OrderStatus.Delivered)
+                        {
+                            <button type="button" class="btn btn-sm btn-danger mt-2 me-2">Refund</button>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
