--- a/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
@@ -4,10 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+<div class="row" style="margin-bottom:15em;">
     @foreach (var order in Model)
     {
-        <div class="col-md-4 mx-auto mt-5">
+        <div class="col-md-6 mx-auto mt-5">
             <div class="card">
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
