--- a/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Home/Index.cshtml
@@ -1,7 +1,72 @@
-﻿
+﻿@model List<Order>
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="text-center mt-5">
+    <h2>ORDERS</h2>
+</div>
+
+<div class="row mt-5">
+    <div class="col-lg-12">
+
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Order No</th>
+                    <th>Order Date</th>
+                    <th>Delivery Date</th>
+                    <th>Order Status</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var order in Model)
+                {
+                <tr>
+                    <td>@order.OrderNo</td>
+                    <td>@order.OrderDate</td>
+                    @if (order.OrderStatus == DAL.Enums.OrderStatus.Delivered)
+                    {
+                        <td>@order.DeliveryDate</td>
+                    }
+                    else
+                    {
+                        <td>-</td>
+                    }
+                    <td>
+                        @switch (order.OrderStatus)
+                        {
+                            case DAL.Enums.OrderStatus.Processing:
+                                <span class="badge bg-info">@order.OrderStatus.ToString()</span>
+                                break;
+                            case DAL.Enums.OrderStatus.Shipping:
+                                <span class="badge bg-warning">@order.OrderStatus.ToString()</span>
+                                break;
+                            case DAL.Enums.OrderStatus.Delivered:
+                                <span class="badge bg-success">@order.OrderStatus.ToString()</span>
+                                break;
+                            case DAL.Enums.OrderStatus.Cancelled:
+                                <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
+                                break;
+                            case DAL.Enums.OrderStatus.Refunded:
+                                <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
+                                break;
+                        }
+                    </td>
+                    @if (order.OrderStatus == DAL.Enums.OrderStatus.Processing)
+                    {
+                        <td><button type="button" class="btn btn-sm btn-primary mt-2 me-2">Send to Cargo</button></td>
+                    }
+                    @if (order.OrderStatus == DAL.Enums.OrderStatus.Shipping)
+                    {
+                        <td><button type="button" class="btn btn-sm btn-success mt-2 me-2">Deliver Order</button></td>
+                    }
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+</div>
 
