Admin area updated

--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                         <a class="nav-link active" aria-current="page" href="~/Admin/Category/Index">Categories</a>
                         <a class="nav-link active" aria-current="page" href="~/Admin/SubCategory/Index">SubCategories</a>
                         <a class="nav-link active" aria-current="page" href="~/Admin/Supplier/Index">Suppliers</a>
+                        <a class="nav-link active" aria-current="page" href="~/Admin/Order/Index">Orders</a>
                     </div>
                 </div>
             </div>
