--- a/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Home/Index.cshtml
@@ -9,6 +9,20 @@
 
 <div class="row mt-5">
     <div class="col-lg-12">
+        @{if (TempData["info"] != null)
+            {
+                <div class="alert alert-success" role="alert">
+                    @TempData["info"]
+                </div>
+            }
+            if (TempData["error"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @TempData["error"]
+                </div>
+            }
+
+        }
 
         <table class="table table-hover">
             <thead>
@@ -56,11 +70,11 @@
                     </td>
                     @if (order.OrderStatus == DAL.Enums.OrderStatus.Processing)
                     {
-                        <td><button type="button" class="btn btn-sm btn-primary mt-2 me-2">Send to Cargo</button></td>
+                        <td>@Html.ActionLink("Send to Cargo", "SendToCargo", new { id = order.ID }, new { @class = "btn btn-sm btn-primary mt-2 me-2" })</td>
                     }
                     @if (order.OrderStatus == DAL.Enums.OrderStatus.Shipping)
                     {
-                        <td><button type="button" class="btn btn-sm btn-success mt-2 me-2">Deliver Order</button></td>
+                        <td>@Html.ActionLink("Deliver Order", "Deliver", new { id = order.ID }, new { @class = "btn btn-sm btn-success mt-2 me-2" })</td>
                     }
                 </tr>
                 }
