--- a/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Shared/_Layout.cshtml
@@ -17,9 +17,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="#">Orders</a>
-                    </div>
-                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active" aria-current="page" href="~/Depot/Home/Index">Orders</a>
                         <a class="nav-link active" aria-current="page" href="#">Supplier Orders</a>
                     </div>
                 </div>
