--- a/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
@@ -19,10 +19,14 @@
         }
 
     }
+    <div class="text-center" style="margin-top:50px;">
+        <label>Search: </label>
+        <input placeholder="Order No"/>
+    </div>
 
     @foreach (var order in Model)
     {
-        <div class="col-md-6 mx-auto mt-5">
+        <div class="col-sm-12 col-md-12 col-lg-12 mx-auto mt-5">
             <div class="card">
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
