--- a/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Home/Index.cshtml
@@ -10,6 +10,11 @@
 <div class="row mt-5">
     <div class="col-lg-12">
 
+        <div class="text-center" style="margin-top:50px;">
+            <label>Search: </label>
+            <input placeholder="Order No" />
+        </div>
+
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -23,38 +28,38 @@
             <tbody>
                 @foreach (var order in Model)
                 {
-                <tr>
-                    <td>@order.OrderNo</td>
-                    <td>@order.OrderDate</td>
-                    @if (order.OrderStatus == DAL.Enums.OrderStatus.Delivered)
-                    {
-                        <td>@order.DeliveryDate</td>
-                    }
-                    else
-                    {
-                        <td>-</td>
-                    }
-                    <td>
-                        @switch (order.OrderStatus)
+                    <tr>
+                        <td>@order.OrderNo</td>
+                        <td>@order.OrderDate</td>
+                        @if (order.OrderStatus == DAL.Enums.OrderStatus.Delivered)
                         {
-                            case DAL.Enums.OrderStatus.Processing:
-                                <span class="badge bg-info">@order.OrderStatus.ToString()</span>
-                                break;
-                            case DAL.Enums.OrderStatus.Shipping:
-                                <span class="badge bg-warning">@order.OrderStatus.ToString()</span>
-                                break;
-                            case DAL.Enums.OrderStatus.Delivered:
-                                <span class="badge bg-success">@order.OrderStatus.ToString()</span>
-                                break;
-                            case DAL.Enums.OrderStatus.Cancelled:
-                                <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
-                                break;
-                            case DAL.Enums.OrderStatus.Refunded:
-                                <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
-                                break;
+                            <td>@order.DeliveryDate</td>
                         }
-                    </td>
-                </tr>
+                        else
+                        {
+                            <td>-</td>
+                        }
+                        <td>
+                            @switch (order.OrderStatus)
+                            {
+                                case DAL.Enums.OrderStatus.Processing:
+                                    <span class="badge bg-info">@order.OrderStatus.ToString()</span>
+                                    break;
+                                case DAL.Enums.OrderStatus.Shipping:
+                                    <span class="badge bg-warning">@order.OrderStatus.ToString()</span>
+                                    break;
+                                case DAL.Enums.OrderStatus.Delivered:
+                                    <span class="badge bg-success">@order.OrderStatus.ToString()</span>
+                                    break;
+                                case DAL.Enums.OrderStatus.Cancelled:
+                                    <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
+                                    break;
+                                case DAL.Enums.OrderStatus.Refunded:
+                                    <span class="badge bg-danger">@order.OrderStatus.ToString()</span>
+                                    break;
+                            }
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
