--- a/Technomarkt_Ecommerce/UI/Content/css/Styles.css
+++ b/Technomarkt_Ecommerce/UI/Content/css/Styles.css
@@ -32,7 +32,7 @@
 
 #carousel img {
     width: 35%;
-    height: 35%;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
