Cart, billing details, checkout, order completion pages separated from home controller and added to a new cart controller.

--- a/Technomarkt_Ecommerce/UI/Content/css/Styles.css
+++ b/Technomarkt_Ecommerce/UI/Content/css/Styles.css
@@ -169,6 +169,12 @@ div h2 {
         font-weight: 600;
     }
 
+/* Product Page */
+
+#product-page{
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
 
 
 /* Footer Section */
