--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                         </a>
                     </form>
                     <form class="d-flex">
-                        <a class="btn btn-outline-warning" href="/Home/MyCart">
+                        <a class="btn btn-outline-warning" href="/Cart/Index">
                             Cart
                             <span class="badge bg-warning text-black ms-1 rounded-pill">
                                 @{
