--- a/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="row mt-5">
     <div class="col-lg-12">
 
-        <div class="text-center" style="margin-top:50px;">
+        <div class="text-center" style="margin-top:30px; margin-bottom:30px;">
             <label>Search: </label>
             <input placeholder="Order No" />
         </div>
