--- a/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 
         }
 
-        <div class="text-center" style="margin-top:50px;">
+        <div class="text-center" style="margin-top:30px; margin-bottom:30px;">
             <label>Search: </label>
             <input placeholder="Order No" />
         </div>
