--- a/Technomarkt_Ecommerce/UI/Views/Home/Contact.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Contact.cshtml
@@ -4,30 +4,111 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-4 mx-auto mt-5">
-        <div class="card">
-            <div class="card-header">
-                <h2 style="text-align:center;">Contact Us</h2>
-            </div>
-            <div class="card-body">
-                <form method="post">
-                    <div class="mb-1">
-                        <label>Email:</label>
-                        @Html.ValidationMessageFor(x => x.Email)
-                        <br />
-                        @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
-                    </div>
-                    <div class="mb-1">
-                        <label>Message:</label>
-                        @Html.ValidationMessageFor(x => x.Message)
-                        <br />
-                        @Html.TextAreaFor(x => x.Message, new { @class = "form-control" })
-                    </div>
-                    <button type="submit" class="btn btn-dark mt-3">Send</button>
-                </form>
+@*<div class="row">
+        <div class="col-md-4 mx-auto mt-5">
+            <div class="card">
+                <div class="card-header">
+                    <h2 style="text-align:center;">Contact Us</h2>
+                </div>
+                <div class="card-body">
+                    <form method="post">
+                        <div class="mb-1">
+                            <label>Email:</label>
+                            @Html.ValidationMessageFor(x => x.Email)
+                            <br />
+                            @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
+                        </div>
+                        <div class="mb-1">
+                            <label>Message:</label>
+                            @Html.ValidationMessageFor(x => x.Message)
+                            <br />
+                            @Html.TextAreaFor(x => x.Message, new { @class = "form-control" })
+                        </div>
+                        <button type="submit" class="btn btn-dark mt-3">Send</button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+    </div>*@
 
+
+<section id="contact-form" class="mb-4">
+
+
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us!</h2>
+
+    <p class="text-center w-responsive mx-auto mb-5">
+        Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+        a matter of hours to help you.
+    </p>
+
+    <div class="row">
+        <div class="col-md-9 mb-md-0 mb-5">
+            <form name="contact-form" method="POST">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <label for="name" class="">Name</label>
+                            <input type="text" id="name" name="name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <label for="email" class="">Email</label>
+                            <input type="text" id="email" name="email" class="form-control">
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="md-form mb-0">
+                            <label for="subject" class="">Subject</label>
+                            <input type="text" id="subject" name="subject" class="form-control">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-md-12">
+
+                        <div class="md-form">
+                            <label for="message">Message</label>
+                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                        </div>
+
+                    </div>
+                </div>
+
+            </form>
+
+            <div class="text-center text-md-left">
+                <a class="btn btn-dark mt-5">Send</a>
+            </div>
+            <div class="status"></div>
+        </div>
+        <div class="col-md-3 text-center">
+            <ul class="list-unstyled mb-0">
+                <li>
+                    <i class="fas fa-map-marker-alt fa-2x"></i>
+                    <p>Istanbul, Turkey</p>
+                </li>
+
+                <li>
+                    <i class="fas fa-phone mt-4 fa-2x"></i>
+                    <p>+90 530 067 11 55</p>
+                </li>
+
+                <li>
+                    <i class="fas fa-envelope mt-4 fa-2x"></i>
+                    <p>technomarkt@gmail.com</p>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+</section>
