--- a/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Order/Index.cshtml
@@ -88,7 +88,7 @@
                         }
                     </ul>
                     <div class="d-flex">
-                        <button type="button" class="btn btn-sm btn-primary mt-2 me-2">Details</button>
+                        @Html.ActionLink("Details", "OrderDetails", new { id = order.ID }, new { @class = "btn btn-sm btn-primary mt-2 me-2" })
                         @if (order.OrderStatus == DAL.Enums.OrderStatus.Processing)
                         {
                             @Html.ActionLink("Cancel", "Cancel", new { id = order.ID }, new { @class = "btn btn-sm btn-danger mt-2 me-2" })
