Accountant page updated.

--- a/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 
 <div class="text-center mt-5">
     <h2>ORDERS</h2>
+    <h5>TOTAL INCOME: $@ViewBag.OrderSum</h5>
 </div>
 
 <div class="row mt-5">
